--- a/homepage.html
+++ b/homepage.html
@@ -23,31 +23,45 @@
       <button type ="button" id="imageOfShedd" class="btn"> Image of Shedd Aquarium </button>
       <button type ="button" id="millPark" class="btn"> Image of Millenium Park </button>
       <button type ="button" id="lincolnPark" class="btn"> Image of Lincoln Park Zoo </button>
-      <p style="text-align: center;"> Need help planning your trip? Follow these steps!</p>
     </div>
+
+    <br>
+
+    <p style="text-align: center;"> Need help planning your trip? Follow these steps!</p>
 
     <p> Step 1: Choose your Attractions </p>
-
-    <div class= "viewMore" style = "vertical-align: middle;">
-    <button type ="button" id="VMA" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Attractions </button>
-    <span style = "padding: 10px;">
-      <p>Chicago is full of fun attractions, including Sears Towers, Sedd Aquarium, and more! </p>
-    </span>
+    <div class= "viewMore">
+      <button type ="button" id="VMA" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Attractions </button>
+      <span style = "padding: 10px;">
+        <p>Chicago is full of fun attractions, including Sears Towers, Sedd Aquarium, and more! </p>
+      </span>
     </div>
+
     <br>
     <hr>
+
     <p> Step 2: Figure out Transportation within the City </p>
-    <div class= "viewMore" style = "display: inline">
-    <button type ="button" id="VMT" class="btn"> View More Transportation </button>
-    <p> Chicago has several forms of inner city travel! </p>
+    <div class= "viewMore">
+      <button type ="button" id="VMT" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Transportation </button>
+      <span style = "padding: 10px;">
+        <p> Chicago has several forms of inner city travel! </p>
+      </span>
     </div>
+
+    <br>
     <hr>
+
     <p> Step 3: Driving? Learn about Parking </p>
-    <div class= "viewMore" style = "display: inline">
-    <button type ="button" id="VMP" class="btn"> View More Parking </button>
-    <p> Driving to Chicago? Make sure you know about parking! </p>
+    <div class= "viewMore">
+      <button type ="button" id="VMP" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Parking </button>
+      <span style = "padding: 10px;">
+      <p> Driving to Chicago? Make sure you know about parking! </p>
+      </span>
     </div>
+
+    <br>
     <hr>
+
     <p>Step 4: Covid Guidelines</p>
     <p> In Chicago, masks may be required for most indoor areas regardless of vaccination status, but those who are vaccinated do not need to wear masks outdoors </p>
   </body>
