attractions page test

--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <meta charset="utf-8">
+
   <title>Chocolate Disco Chicago Tourism</title>
   <link rel="stylesheet" href=
-    "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css%22%3E" > 
+  "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css">
+
+  
     <link rel="stylesheet" href="homepage.css">
+
+  </head>
+
+
   <body>
 
     <h1 style="text-align: center;">Chocolate Disco Chicago Tourism</h1>
@@ -11,7 +20,7 @@
     <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Below to Learn More!</p>
     
     <div class= "button-center">
-      <button type ="button" id="Attractions" class="btn"> Attractions </button>
+      <button type ="button" id="Attractions" class="btn" onclick="location.href='https://github.com/rkodit2/cs422project.git/attractions.html';"> Attractions </button>
       <button type ="button" id="Transportation" class="btn"> Transportation </button>
       <button type ="button" id="Parking" class="btn"> Parking </button>
     </div>
@@ -31,7 +40,7 @@
 
     <p> Step 1: Choose your Attractions </p>
     <div class= "viewMore">
-      <button type ="button" id="VMA" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Attractions </button>
+      <button type ="button" id="VMA" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More </button>
       <span style = "padding: 10px;">
         <p>Chicago is full of fun attractions, including Sears Towers, Sedd Aquarium, and more! </p>
       </span>
@@ -42,7 +51,7 @@
 
     <p> Step 2: Figure out Transportation within the City </p>
     <div class= "viewMore">
-      <button type ="button" id="VMT" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Transportation </button>
+      <button type ="button" id="VMT" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More </button>
       <span style = "padding: 10px;">
         <p> Chicago has several forms of inner city travel! </p>
       </span>
@@ -53,7 +62,7 @@
 
     <p> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
-      <button type ="button" id="VMP" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More Parking </button>
+      <button type ="button" id="VMP" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More </button>
       <span style = "padding: 10px;">
       <p> Driving to Chicago? Make sure you know about parking! </p>
       </span>
