attractions page sears towe button

--- a/attractions.html
+++ b/attractions.html
@@ -2,8 +2,25 @@
 <html>
     <head>
         <title>Chocolate Disco Chicago Tourism</title>
+        <link rel="stylesheet" href="homepage.css">
+
     </head>
     <body>
-        <h1 style="text-align: center;">Chocolate Disco Chicago Tourism</h1>
+        <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
+        <div class= "button-center">
+            <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
+            <button type ="button" id="Transportation" class="btn"> Transportation </button>
+            <button type ="button" id="Parking" class="btn"> Parking </button>
+        </div>
+        <h2 style="text-align: center;"> Attractions </h2>
+        <h3 style="text-align: center;"> Recommendations</h3>
+        <div class= "button-center">
+            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
+            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
+            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
+            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
+        </div>
+      
+    
     </body>
 </html>
