--- a/homepage.html
+++ b/homepage.html
@@ -15,12 +15,12 @@
 
   <body>
 
-    <h1 style="text-align: center;">Chocolate Disco Chicago Tourism</h1>
+    <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
     <p style="text-align: center;">Image of Chicago Sky Line.</p>
     <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Below to Learn More!</p>
     
     <div class= "button-center">
-      <button type ="button" id="Attractions" class="btn" onclick="location.href='https://github.com/rkodit2/cs422project.git/attractions.html';"> Attractions </button>
+      <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
       <button type ="button" id="Transportation" class="btn"> Transportation </button>
       <button type ="button" id="Parking" class="btn"> Parking </button>
     </div>
