buttons and 1 image

--- a/attractions.html
+++ b/attractions.html
@@ -2,25 +2,43 @@
 <html>
     <head>
         <title>Chocolate Disco Chicago Tourism</title>
+        <link rel="stylesheet" href=
+        "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css">
         <link rel="stylesheet" href="homepage.css">
 
     </head>
     <body>
         <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
+        <br>
         <div class= "button-center">
             <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
             <button type ="button" id="Transportation" class="btn"> Transportation </button>
             <button type ="button" id="Parking" class="btn"> Parking </button>
         </div>
+        <br>
         <h2 style="text-align: center;"> Attractions </h2>
-        <h3 style="text-align: center;"> Recommendations</h3>
+        <br>
+        <h4 style="text-align: center;"> Recommendations</h3>
         <div class= "button-center">
-            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
-            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
-            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
-            <button type = "button" id = "Sears" class="btn" style = "width: 50px; height: 50px;"> Sears Tower</button>
+            <button type = "button" id = "Sears" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Sears Tower</button>
+            <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> Shedd Aquarium </button>
+            <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Field Museum </button>
+            <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Millenium Park </button>
         </div>
-      
-    
+        <br>
+        <h4 style = "text-align: center;"> Other Popular Attractions</h4>
+        <div class= "button-center">
+            <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
+            <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Water Tower Place</button>
+            <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Museum of Science and Industry</button>
+            <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Buckingham Fountain</button>
+        </div>
+        <br>
+        <div class= "button-center">
+            <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Children's Museum</button>
+            <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Navy Pier </button>
+            <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Adler Planitarium </button>
+            <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Art Institute </button>
+        </div>
     </body>
 </html>
