--- a/homepage.html
+++ b/homepage.html
@@ -28,10 +28,10 @@
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
 
     <div class= "button-center">
-      <button type ="button" id="imageOfFieldMuseum" class="btn"> Image of Field Museum </button>
-      <button type ="button" id="imageOfShedd" class="btn"> Image of Shedd Aquarium </button>
-      <button type ="button" id="millPark" class="btn"> Image of Millenium Park </button>
-      <button type ="button" id="lincolnPark" class="btn"> Image of Lincoln Park Zoo </button>
+      <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Field Museum </button>
+      <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> Shedd Aquarium </button>
+      <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Millenium Park </button>
+      <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
     </div>
 
     <br>
@@ -40,8 +40,8 @@
 
     <p> Step 1: Choose your Attractions </p>
     <div class= "viewMore">
-      <button type ="button" id="VMA" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More </button>
-      <span style = "padding: 10px;">
+      <button type ="button" id="VMA" class="btn" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <span style = "padding: 15px;">
         <p>Chicago is full of fun attractions, including Sears Towers, Sedd Aquarium, and more! </p>
       </span>
     </div>
@@ -51,8 +51,8 @@
 
     <p> Step 2: Figure out Transportation within the City </p>
     <div class= "viewMore">
-      <button type ="button" id="VMT" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More </button>
-      <span style = "padding: 10px;">
+      <button type ="button" id="VMT" class="btn" style = "width: 120px; height:50px; vertical-align: middle;  margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <span style = "padding: 15px;">
         <p> Chicago has several forms of inner city travel! </p>
       </span>
     </div>
@@ -62,8 +62,8 @@
 
     <p> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
-      <button type ="button" id="VMP" class="btn" style = "width: 100px; height:50px; vertical-align: middle; margin: 10px;"> View More </button>
-      <span style = "padding: 10px;">
+      <button type ="button" id="VMP" class="btn" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <span style = "padding: 15px;">
       <p> Driving to Chicago? Make sure you know about parking! </p>
       </span>
     </div>
