--- a/attractions.html
+++ b/attractions.html
@@ -30,12 +30,12 @@
         <div class= "button-center">
             <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
             <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Water Tower Place</button>
-            <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Museum of Science and Industry</button>
-            <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Buckingham Fountain</button>
+            <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: 100%; background-repeat: no-repeat;"> Museum of Science and Industry</button>
+            <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: 100%; background-repeat: no-repeat;">Buckingham Fountain</button>
         </div>
         <br>
         <div class= "button-center">
-            <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Children's Museum</button>
+            <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> Children's Museum</button>
             <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Navy Pier </button>
             <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Adler Planitarium </button>
             <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Art Institute </button>
