--- a/attractions.html
+++ b/attractions.html
@@ -30,8 +30,8 @@
         <div class= "button-center">
             <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
             <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Water Tower Place</button>
-            <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: 100%; background-repeat: no-repeat;"> Museum of Science and Industry</button>
-            <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: 100%; background-repeat: no-repeat;">Buckingham Fountain</button>
+            <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: cover; background-repeat: no-repeat;"> Museum of Science and Industry</button>
+            <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: cover; background-repeat: no-repeat;">Buckingham Fountain</button>
         </div>
         <br>
         <div class= "button-center">
