--- a/homepage.html
+++ b/homepage.html
@@ -21,14 +21,14 @@
     
     <div class= "button-center">
       <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
-      <button type ="button" id="Transportation" class="btn"> Transportation </button>
+      <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';"> Transportation </button>
       <button type ="button" id="Parking" class="btn"> Parking </button>
     </div>
 
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
 
     <div class= "button-center">
-      <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Field Museum </button>
+      <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"> Field Museum </button>
       <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> Shedd Aquarium </button>
       <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Millenium Park </button>
       <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
