--- a/attractions.html
+++ b/attractions.html
@@ -20,10 +20,10 @@
         <br>
         <h4 style="text-align: center;"> Recommendations</h3>
         <div class= "button-center">
-            <button type = "button" id = "Sears" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Sears Tower</button>
+            <button type = "button" id = "Sears" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Sears\ Tower.jpg'); background-size: 100%; background-repeat: no-repeat;"> Sears Tower</button>
             <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> Shedd Aquarium </button>
-            <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Field Museum </button>
-            <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Millenium Park </button>
+            <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"> Field Museum </button>
+            <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; "> Millenium Park </button>
         </div>
         <br>
         <h4 style = "text-align: center;"> Other Popular Attractions</h4>
@@ -36,9 +36,9 @@
         <br>
         <div class= "button-center">
             <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> Children's Museum</button>
-            <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Navy Pier </button>
-            <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Adler Planitarium </button>
-            <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Art Institute </button>
+            <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/navyPier.jpg'); background-size: 100%; background-repeat: no-repeat;"> Navy Pier </button>
+            <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/adler.jpg'); background-size: 100%; background-repeat: no-repeat;"> Adler Planitarium </button>
+            <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/art.jpg'); background-size: 100%; background-repeat: no-repeat;"> Art Institute </button>
         </div>
     </body>
 </html>
