transportation page done

--- a/attractions.html
+++ b/attractions.html
@@ -12,8 +12,8 @@
         <br>
         <div class= "button-center">
             <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
-            <button type ="button" id="Transportation" class="btn"> Transportation </button>
-            <button type ="button" id="Parking" class="btn"> Parking </button>
+            <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';"> Transportation </button>
+            <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';"> Parking </button>
         </div>
         <br>
         <h2 style="text-align: center;"> Attractions </h2>
