--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
     <div class= "button-center">
       <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
       <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';"> Transportation </button>
-      <button type ="button" id="Parking" class="btn"> Parking </button>
+      <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';"> Parking </button>
     </div>
 
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
