--- a/parking.html
+++ b/parking.html
@@ -17,7 +17,7 @@
                     <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';"> Parking </button>
             </div>
             <br>
-            <h2 style="text-align: center;"> Transportation </h2>
+            <h2 style="text-align: center;"> Parking </h2>
             <br>
             <div class = "center">
             <div class= "viewMore">
