fixed transportation and change button size

--- a/homepage.html
+++ b/homepage.html
@@ -20,9 +20,9 @@
     <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Below to Learn More!</p>
     
     <div class= "button-center">
-      <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
-      <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';"> Transportation </button>
-      <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';"> Parking </button>
+      <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
+      <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
+      <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
     </div>
 
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
@@ -38,7 +38,7 @@
 
     <p style="text-align: center;"> Need help planning your trip? Follow these steps!</p>
 
-    <p> Step 1: Choose your Attractions </p>
+    <p style = "padding-left: 5px;"> Step 1: Choose your Attractions </p>
     <div class= "viewMore">
       <button type ="button" id="VMA" class="btn" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
       <span style = "padding: 15px;">
@@ -49,7 +49,7 @@
     <br>
     <hr>
 
-    <p> Step 2: Figure out Transportation within the City </p>
+    <p style = "padding-left: 5px;"> Step 2: Figure out Transportation within the City </p>
     <div class= "viewMore">
       <button type ="button" id="VMT" class="btn" style = "width: 120px; height:50px; vertical-align: middle;  margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
       <span style = "padding: 15px;">
@@ -60,7 +60,7 @@
     <br>
     <hr>
 
-    <p> Step 3: Driving? Learn about Parking </p>
+    <p style = "padding-left: 5px;"> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
       <button type ="button" id="VMP" class="btn" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
       <span style = "padding: 15px;">
@@ -71,7 +71,7 @@
     <br>
     <hr>
 
-    <p>Step 4: Covid Guidelines</p>
-    <p> In Chicago, masks may be required for most indoor areas regardless of vaccination status, but those who are vaccinated do not need to wear masks outdoors </p>
+    <p style = "padding-left: 5px;">Step 4: Covid Guidelines</p>
+    <p style = "padding-left: 15px;"> In Chicago, masks may be required for most indoor areas regardless of vaccination status, but those who are vaccinated do not need to wear masks outdoors </p>
   </body>
 </html>
