--- a/attractions.html
+++ b/attractions.html
@@ -11,9 +11,9 @@
         <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
         <br>
         <div class= "button-center">
-            <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
-            <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';"> Transportation </button>
-            <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';"> Parking </button>
+            <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
+            <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
+            <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
         </div>
         <br>
         <h2 style="text-align: center;"> Attractions </h2>
