--- a/parking.html
+++ b/parking.html
@@ -12,32 +12,11 @@
             <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
             <br>
                 <div class= "button-center">
-                    <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';"> Attractions </button>
-                    <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';"> Transportation </button>
-                    <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';"> Parking </button>
-            </div>
+                    <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
+                    <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
+                    <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>            </div>
             <br>
             <h2 style="text-align: center;"> Parking </h2>
             <br>
-            <div class = "center">
-            <div class= "viewMore">
-                <button type ="button" id="VMA" class="btn" style = "width: 220px; height:220px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-                <span style = "padding: 70px;">
-                <p style = "font-size: 50px; vertical-align: 50%;">CTA: Mass Public Transit within the City of Chicago </p>
-                </span>
-            </div>
-            <div class= "viewMore">
-                <button type ="button" id="VMA" class="btn" style = "width: 220px; height:220px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-                <span style = "padding: 70px;">
-                <p style = "font-size: 50px">Uber/Lyft: Ride Hailing and Sharing throughout Chicago </p>
-                </span>
-            </div>
-            <div class= "viewMore">
-                <button type ="button" id="VMA" class="btn" style = "width: 220px; height:220px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-                <span style = "padding: 70px;">
-                <p style = "font-size: 50px">DIVVY: Bicycle sharing system found in the metropolitan area of Chicago </p>
-                </span>
-            </div>
-        </div>
     </body>
 </html>
