added parking page buttons

--- a/parking.html
+++ b/parking.html
@@ -14,9 +14,17 @@
                 <div class= "button-center">
                     <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
                     <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
-                    <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>            </div>
+                    <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
+                </div>
             <br>
-            <h2 style="text-align: center;"> Parking </h2>
+            <h3 style="text-align: center;"> Parking </h2>
             <br>
+
+            <div class= "button-center">
+                <button type ="button" id="Attractions" class="btn" onclick="location.href='#';" style="width: 130px; height: 50px; font-size: 15px;"> General Rules </button>
+                <button type ="button" id="Transportation" class="btn" onclick="location.href='#';" style="width: 140px; height: 50px; font-size: 15px"> Types of Parking </button>
+                <button type ="button" id="Parking" class="btn" onclick="location.href='#';" style="width: 130px; height: 50px; font-size: 15px;"> SpotHero </button>
+            </div>
+
     </body>
 </html>
