--- a/attractions.html
+++ b/attractions.html
@@ -8,7 +8,11 @@
 
     </head>
     <body>
-        <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
+        <br>
+        <div id="banner">
+          <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" onclick="location.href='homepage.html';">
+        </div>
+        
         <br>
         <div class= "button-center">
             <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
