--- a/homepage.html
+++ b/homepage.html
@@ -15,16 +15,22 @@
 
   <body>
 
-    <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1> 
-    <p style="text-align: center;">Image of Chicago Sky Line.</p>
-    <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Below to Learn More!</p>
+    <br>
+  
+    <div id="banner">
+      <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" onclick="location.href='homepage.html';">
+    </div>
+
+    <br>
     
     <div class= "button-center">
       <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
       <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
       <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
     </div>
-
+    <p style="text-align: center;">Image of Chicago Sky Line.</p>
+    <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Above to Learn More!</p>
+    <br>
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
 
     <div class= "button-center">
