--- a/transportation.html
+++ b/transportation.html
@@ -9,36 +9,40 @@
     </head>
     <body>
         
-            <h1 style="text-align: center;" onclick="location.href='homepage.html';">Chocolate Disco Chicago Tourism</h1>
-            <br>
-                <div class= "button-center">
-                    <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
-                    <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
-                    <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>            </div>
-            <br>
-            <h2 style="text-align: center;"> Transportation </h2>
-            <br>
-            <div class= "viewMore" style = "padding-left: 200px;">
-                <button type ="button" id="CTA" class="btn" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-                <span style = "padding: 40px;">
+        <br>
+        <div id="banner">
+          <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" onclick="location.href='homepage.html';">
+        </div>
+
+        <br>
+        <div class= "button-center">
+            <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
+            <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
+            <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>            </div>
+        <br>
+        <h2 style="text-align: center;"> Transportation </h2>
+        <br>
+        <div class= "viewMore" style = "padding-left: 200px;">
+            <button type ="button" id="CTA" class="btn" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <span style = "padding: 40px;">
                 <p style = "font-size: 30px; vertical-align: 50%;">CTA: Mass Public Transit within the City of Chicago </p>
-                </span>
-            </div>
-            <br>
-            <div class= "viewMore" style = "padding-left: 200px;">
-                <button type ="button" id="UL" class="btn" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-                <span style = "padding: 40px;">
+            </span>
+        </div>
+        <br>
+        <div class= "viewMore" style = "padding-left: 200px;">
+            <button type ="button" id="UL" class="btn" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <span style = "padding: 40px;">
                 <p style = "font-size: 30px">Uber/Lyft: Ride Hailing and Sharing throughout Chicago </p>
-                </span>
-            </div>
+            </span>
+        </div>
 
-            <br>
+        <br>
 
-            <div class = "viewMore" style = "padding-left: 200px;">
-                <button type = "button" id = "Divvy" class="btn" style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-                <span style = "padding: 40px;">
-                    <p style = "font-size: 30px;">Divvy: Bicycle sharing system found in the metropolitan area of Chicago</p>
-                </span>
-            </div>
+        <div class = "viewMore" style = "padding-left: 200px;">
+            <button type = "button" id = "Divvy" class="btn" style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <span style = "padding: 40px;">
+                <p style = "font-size: 30px;">Divvy: Bicycle sharing system found in the metropolitan area of Chicago</p>
+            </span>
+        </div>
     </body>
 </html>
