--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,8 @@
       <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
       <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
     </div>
-    <p style="text-align: center;">Image of Chicago Sky Line.</p>
+    <br>
+    <img src="pictures/skyline.jpg" alt="mainpage skyline" class = "center">
     <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Above to Learn More!</p>
     <br>
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
@@ -52,8 +53,8 @@
       </span>
     </div>
 
-    <br>
-    <hr>
+    <!-- <br> -->
+    <hr style="background-color: rgb(25, 25, 121); height: .5px">
 
     <p style = "padding-left: 5px;"> Step 2: Figure out Transportation within the City </p>
     <div class= "viewMore">
@@ -63,8 +64,8 @@
       </span>
     </div>
 
-    <br>
-    <hr>
+   <!-- <br> -->
+    <hr style="background-color: rgb(25, 25, 121); height: .5px">
 
     <p style = "padding-left: 5px;"> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
@@ -74,8 +75,8 @@
       </span>
     </div>
 
-    <br>
-    <hr>
+    <!-- <br> -->
+    <hr style="background-color: rgb(25, 25, 121); height: .5px">
 
     <p style = "padding-left: 5px;">Step 4: Covid Guidelines</p>
     <p style = "padding-left: 15px;"> In Chicago, masks may be required for most indoor areas regardless of vaccination status, but those who are vaccinated do not need to wear masks outdoors </p>
