--- a/homepage.html
+++ b/homepage.html
@@ -35,10 +35,27 @@
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
 
     <div class= "button-center">
-      <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"> Field Museum </button>
-      <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> Shedd Aquarium </button>
-      <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Millenium Park </button>
-      <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
+      <div class = "fm" style = "display: inline-block;  text-align: center;"> 
+        <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+        <br>
+        <label>Field Museum</label>
+    </div>
+    <div class = "shedd" style = "display: inline-block;  text-align: center;"> 
+      <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+      <br>
+      <label>Shedd Aquarium</label>
+    </div>
+    <div class = "mp" style = "display: inline-block;  text-align: center;"> 
+      <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; "> </button>
+      <br>
+      <label>Millenium Park</label>
+    </div>
+    <div class = "lpz" style = "display: inline-block;  text-align: center;">
+      <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"></button>
+      <br>
+      <label>Lincoln Park Zoo</label>
+    </div>
+      
     </div>
 
     <br>
