--- a/attractions.html
+++ b/attractions.html
@@ -23,26 +23,74 @@
         <h2 style="text-align: center;"> Attractions </h2>
         <br>
         <h4 style="text-align: center;"> Recommendations</h3>
-        <div class= "button-center">
-            <button type = "button" id = "Sears" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Sears\ Tower.jpg'); background-size: 100%; background-repeat: no-repeat;"> Sears Tower</button>
-            <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> Shedd Aquarium </button>
-            <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"> Field Museum </button>
-            <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; "> Millenium Park </button>
+        <div class= "button-center" >
+            <div class = "sears" style = "display: inline-block;  text-align: center;"> 
+                <button type = "button" id = "Sears" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Sears\ Tower.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <br>
+                <label> Sears Tower</label>
+            </div>
+            <div class = "shedd" style = "display: inline-block;  text-align: center;"> 
+                <button type = "button" id = "Shedd" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <br>
+                <label>Shedd Aquarium</label>
+            </div>
+            <div class = "fm" style = "display: inline-block;  text-align: center;"> 
+                <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <br>
+                <label>Field Museum</label>
+            </div>
+            <div class = "mp" style = "display: inline-block;  text-align: center;"> 
+                <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; "> </button>
+                <br>
+                <label>Millenium Park</label>
+            </div>
+
         </div>
         <br>
         <h4 style = "text-align: center;"> Other Popular Attractions</h4>
         <div class= "button-center">
-            <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;">Lincoln Park Zoo</button>
-            <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"> Water Tower Place</button>
-            <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: cover; background-repeat: no-repeat;"> Museum of Science and Industry</button>
-            <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: cover; background-repeat: no-repeat;">Buckingham Fountain</button>
+            <div class = "lpz" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"></button>
+                <br>
+                <label>Lincoln Park <br> Zoo</label>
+            </div>
+            <div class = "wtp" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"></button>
+                <br>
+                <label>Water Tower <br> Place</label>
+            </div>
+            <div class = "msi" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
+                <br>
+                <label>Museum of Science <br> and Industry</label>
+            </div>
+            <div class = "bf" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
+                <br>
+                <label>Buckingham <br> Fountain</label>
         </div>
         <br>
         <div class= "button-center">
-            <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> Children's Museum</button>
-            <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/navyPier.jpg'); background-size: 100%; background-repeat: no-repeat;"> Navy Pier </button>
-            <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/adler.jpg'); background-size: 100%; background-repeat: no-repeat;"> Adler Planitarium </button>
-            <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/art.jpg'); background-size: 100%; background-repeat: no-repeat;"> Art Institute </button>
+            <div class = "cm" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <br>
+                <label>Children's <br> Museum</label>
+            </div>
+            <div class = "np" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/navyPier.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <br>
+                <label>Navy Pier<br> Waterfront</label>
+            </div>
+            <div class = "ap" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/adler.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <br>
+                <label>Adler <br> Planetarium</label>
+            </div>
+            <div class = "ai" style = "display: inline-block;  text-align: center;">
+                <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/art.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <br>
+                <label>Chicago Art <br> Institute</label>
+            </div>
         </div>
     </body>
 </html>
