--- a/homepage.html
+++ b/homepage.html
@@ -46,12 +46,12 @@
       <label>Shedd Aquarium</label>
     </div>
     <div class = "mp" style = "display: inline-block;  text-align: center;"> 
-      <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; "> </button>
+      <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
       <br>
       <label>Millenium Park</label>
     </div>
     <div class = "lpz" style = "display: inline-block;  text-align: center;">
-      <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"></button>
+      <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
       <br>
       <label>Lincoln Park Zoo</label>
     </div>
