--- a/attractions.html
+++ b/attractions.html
@@ -55,7 +55,7 @@
                 <label>Lincoln Park <br> Zoo</label>
             </div>
             <div class = "wtp" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal;"></button>
+                <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/unnamed\ \(1\).jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Water Tower <br> Place</label>
             </div>
