added millenium park, basics of spotHero, and uber/lyft page

--- a/homepage.html
+++ b/homepage.html
@@ -46,7 +46,7 @@
       <label>Shedd Aquarium</label>
     </div>
     <div class = "mp" style = "display: inline-block;  text-align: center;"> 
-      <button type = "button" id = "MP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+      <button type = "button" id = "MP" class="btn" onclick="location.href='millenium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
       <br>
       <label>Millenium Park</label>
     </div>
