--- a/parking.html
+++ b/parking.html
@@ -21,13 +21,13 @@
             <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
         </div>
         <br>
-        <h3 style="text-align: center;"> Parking </h2>
+        <h2 style="text-align: center;"> Parking </h2>
         <br>
 
         <div class= "button-center">
                 <button type ="button" id="generalRules " class="btn" onclick="location.href='parking.html';" style="width: 130px; height: 50px; font-size: 15px;"> General Rules </button>
                 <button type ="button" id="typesOfParking" class="btn" onclick="location.href='#';" style="width: 140px; height: 50px; font-size: 15px"> Types of Parking </button>
-                <button type ="button" id="spotHero" class="btn" onclick="location.href='#';" style="width: 130px; height: 50px; font-size: 15px;"> SpotHero </button>
+                <button type ="button" id="spotHero" class="btn" onclick="location.href='spotHero.html';" style="width: 130px; height: 50px; font-size: 15px;"> SpotHero </button>
             </div>
 
             <br>
