--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -26,7 +26,7 @@
             filled with thriving aquatic life for unforgettably amazing encounters.</p>
         
 
-        <h4>Costs</h4>
+        <h4>Costs:</h4>
 
         <table style="width: 75%;">
             <tr>
@@ -58,7 +58,7 @@
           <p>Members and Children under 3 are free!
         </p><br>
 
-        <h4>Memberships</h5>
+        <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here are some of the benefits: </p>
         <ul>
             <li>40% Discount on 4-D Experiences!</li>
@@ -68,12 +68,12 @@
         </ul>
         <p> Memberships start at $750 (Supporter) and go up to $1,000 (Ambassador), with benefits varying by membership </p>
 
-        <h5>Covid Guidelines</h4>
+        <h5>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status</p>
         
 
 
-        <h4>Location</h4>
+        <h4>Location:</h4>
         <div class="gmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20710.383687143636!2d-87.62450009179427!3d41.87211291519135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2b635fb775f9%3A0x32059de3df50fbdf!2sShedd%20Aquarium!5e0!3m2!1sen!2sus!4v1635986667454!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
             <p style="padding-left: 20px; padding-top: 150px; font-size: 20px;">
