--- a/transportation.html
+++ b/transportation.html
@@ -30,7 +30,7 @@
         </div>
         <br>
         <div class= "viewMore" style = "padding-left: 200px;">
-            <button type ="button" id="UL" class="btn" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <button type ="button" id="UL" class="btn" onclick="location.href='uberLyft.html';" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
             <span style = "padding: 40px;">
                 <p style = "font-size: 30px">Uber/Lyft: Ride Hailing and Sharing throughout Chicago </p>
             </span>
