LPZ, Field Museum, Water Tower pages

--- a/searsTower.html
+++ b/searsTower.html
@@ -20,7 +20,7 @@
     </div>
     <br>
     <h2 style="text-align: center;"> Sears Tower </h2>   
-    <div style = "padding-left: 350px; padding-bottom: 50px;">
+    <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
         <p style="padding-bottom: 5px;">The 12th tallest tower in the world, Sears Tower stands at 1,450 feet,
            110 stories tall, and is also the highest public viewing area throughout the US.</p>
