--- a/millenium.html
+++ b/millenium.html
@@ -20,7 +20,7 @@
     </div>
     <br>
     <h2 style="text-align: center;"> Millenium Park </h2>   
-    <div style = "padding-left: 350px; padding-bottom: 50px;">
+    <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
         <p style="padding-bottom: 5px;">A 5 million Gallon aquarium, Shedd Aquarium is an indoor public aquarium, 
             filled with thriving aquatic life for unforgettably amazing encounters.</p>
